--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,101 @@
+/* Universal Styles */
+body {
+    margin: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 22px;
+    color: black;
+    background-color: #edd9af;
+    text-align: center;
+}
+
+/* Header */
+nav {
+    margin: 0 10%;
+    padding-bottom: 50px;
+}
+
+ul {    
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    display: inline-block;
+    padding: 10px;
+}
+
+li a {
+    text-decoration: none;
+    color: black;
+    background-color: #dfbb71;
+    padding: 10px;
+    margin: 10px;
+}
+
+li a:hover {
+    background-color: #d19d33;
+    font-weight: bold;
+}
+
+/* Main */
+
+#mission {
+    background-image: url(https://images.unsplash.com/photo-1555505019-8c3f1c4aba5f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+#mission .content {
+    background-color: #edd9af;
+    margin: 0;
+    padding: 10px 0px;
+}
+
+#products {
+    min-height: 500px;
+    margin: auto;
+    padding-top: 30px;
+}
+
+.products {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: center;
+    text-align: center;
+}
+
 .product img {
     width: 200px;
     height: auto;
+    max-height: 250px;
+    max-width: 250px;
+    margin: auto;
+}
+
+.product span {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    font-weight: bold;
+}
+
+.team {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-top: 5px;
+}
+
+.shop, .contact, footer {
+    padding-top: 20px;
 }
 
 .team img {
     width: 200px;
     height: auto;
+    max-height: 250px;
+    max-width: 250px;
+    margin: auto;
 }
